# video_stack

./: .gitignore  Cargo.toml  README.md  TikTok-Video-Stacking-Commands.txt  app.toml  ffmpeg_commands.txt
src/: args.rs  command_builder.rs  main.rs  validation.rs
testfiles/: bad_cmdfile.txt  good_cmdfile.txt
testfiles/dummyconfig/: bad_syntax.toml  good.toml  missing_args.toml  no_args_section.toml
