[package]
name = "video_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
threadpool = "1.8.1"
clap = { version = "4.0.25", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.5.1"
indicatif = "0.17.2"
log = "0.4.17"
flexi_logger = "0.24.1"


